--- a/src/pages/Menu/Dashboard/Dashboard.css
+++ b/src/pages/Menu/Dashboard/Dashboard.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--gh-space-xl);
+  overflow-y: auto;
 }
 
 .dashboard-header {
@@ -16,8 +17,10 @@
 .dashboard-content {
   display: flex;
   flex-direction: column;
-  gap: var(--gh-space-xl);
+  gap: var(--gh-space-l);
+
   flex: 1;
+  min-height: 0;
 }
 
 .dashboard-markers {
@@ -60,13 +63,15 @@
 }
 
 .dashboard-recents {
+  height: 100%;
   display: flex;
   flex-direction: column;
-  flex: 1;
-  min-height: 0;
 
   border: 3px solid var(--gh-color-5);
   border-radius: var(--gh-radius-l);
+
+  flex: 1;
+  min-height: 195px;
 }
 
 .dashboard-recents-title {
@@ -78,12 +83,12 @@
   display: flex;
   flex-direction: column;
   gap: var(--gh-space-l);
-  flex: 1;
 
+  flex: 1;
   overflow-y: auto;
 
   padding: var(--gh-space-m);
-  margin-right: var(--gh-space-m);
+  margin-right: var(--gh-space-xs);
 }
 
 .dashboard-recent-cards.custom-scrollbar::-webkit-scrollbar-track {
